--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,119 +17,13 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-
-            <div id="header" class="card-header card-header-flex">
-                <h3 id="index-header" class="text-center"
-                    th:text="#{message.admin-page.header}">Administration page</h3>
-                <div class="card-header-flex">
-                    <div class="language">
-                        <span th:text="#{message.change-language}+': '"></span>
-                        <a th:href="@{'/language?lang=en'}">
-                            <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
-                        </a> <span> /</span>
-                        <a th:href="@{'/language?lang=ru'}">
-                            <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
-                        </a>
-                    </div>
-                    <form name="logoutForm" th:action="@{/logout}" method="post">
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                        <input type="submit" class="btn header-button btn-dark" th:value="#{message.signout}"/>
-                    </form>
-                </div>
-            </div>
-
-            <div>
-                <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-yellow center-align">Pending
-                    requests</a>
-                <a th:href="@{/admin/approved-requests}" th:text="#{message.admin-page.approved}"
-                   class="btn btn-grey center-align">Approved requests</a>
-                <a th:href="@{/admin/denied-requests}" th:text="#{message.admin-page.denied}"
-                   class="btn btn-grey center-align">Denied requests</a>
-            </div>
+            <div th:insert="~{fragments/common :: header}"></div>
+            <div th:insert="~{fragments/admin :: userpanel-admin}"></div>
             <div class="card-body">
-                <p class="white" th:if="${pagedList.hasContent()==false}" th:text="#{message.admin-page.no-request}">
-                    There are no active requests</p>
-                <table th:if="${pagedList.hasContent()==true}" class="table table-bordered white">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
-                        <th scope="col" th:text="#{message.hotel.class}">Class</th>
-                        <th scope="col" th:text="#{message.hotel.checkin}">Check in</th>
-                        <th scope="col" th:text="#{message.hotel.checkout}">Check out</th>
-                        <th scope="col" th:text="#{message.find}">Find</th>
-                        <th scope="col" th:text="#{message.deny}">Deny</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <th:block th:each="request : ${pagedList}">
-                        <tr>
-                            <td th:text="${request.id}" scope="row">1</td>
-                            <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
-                            <td th:text="#{'message.class.'+${request.classID}}"></td>
-                            <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
-                            <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
-                            <td>
-                                <a th:href="@{'/admin/suitable-rooms/'+${request.id}}" th:text="#{message.find}"
-                                   class="btn btn-success float-center">Find</a>
-                            </td>
-                            <td>
-                                <a th:id="'deny-a-'+${request.id}" th:onclick="'showDenyPopup(true,'+${request.id}+')'"
-                                   class="btn button-deny  btn-warning float-center"
-                                   th:text="#{message.deny}">deny</a>
-                                <div th:id="'deny-div-'+${request.id}" hidden
-                                     th:with="deniedRequest = ${request.deniedRequest}">
-                                    <form method="post" th:action="@{/admin/deny}" th:object="${deniedRequest}">
-                                        <input id="reason" name="reason" th:value="${request.deniedRequest.reason}"
-                                               type="text" th:placeholder="#{message.admin-page.enter-reason}">
-                                        <div>
-                                            <button type="submit" class="btn btn-danger deny-btn"
-                                                    th:text="#{message.deny}"> Deny
-                                            </button>
-                                            <a th:onclick="'showDenyPopup(false,'+${request.id}+')'"
-                                               class="btn deny-btn btn-info float-center"
-                                               th:text="#{message.cancel}">Cancel</a>
-                                        </div>
-                                        <input hidden name="id" id="id"
-                                               th:value="${request.deniedRequest.id}"/>
-                                    </form>
-                                </div>
-                            </td>
-                        </tr>
-                    </th:block>
-                    </tbody>
-                </table>
-                <nav th:if="${pagedList.totalPages > 0}">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item" th:classappend="${pagedList.isFirst()} ? disabled">
-                            <a class="page-link"
-                               th:href="@{/admin(page=${pagedList.number})}"
-                               tabindex="-1"><
-                            </a>
-                        </li>
-                        <li th:each="pageNumber : ${pageNumbers}" class="page-item"
-                            th:classappend="${pageNumber==pagedList.number + 1} ? disabled">
-                            <a class="page-link"
-                               th:href="@{/admin(page=${pageNumber})}"
-                               th:text="${pageNumber}">
-                            </a>
-                        </li>
-                        <li class="page-item" th:classappend="${pagedList.isLast()} ? disabled">
-                            <a class="page-link"
-                               th:href="@{/admin(page=${pagedList.number}+2)}"
-                            >>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                <div th:insert="~{fragments/admin :: admintables}"></div>
             </div>
             <div class="card-footer">
-                <a th:href="@{/index}" th:text="#{message.admin-page.user}" class="btn btn-info float-left">User
-                    menu</a>
-                <a th:href="@{/rooms}" th:text="#{message.admin-page.editrooms}" class="btn btn-dark float-right">Edit
-                    rooms</a>
-                <a th:href="@{/admin/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
-                    users</a>
+                <div th:insert="~{fragments/common :: footer}"></div>
             </div>
         </div>
     </div>
@@ -138,5 +32,5 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script th:src="@{js/hotel.js}"></script>
 
-</body>
+</body>k
 </html>
