--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -30,33 +30,6 @@
        th:text="#{message.hotel.new-room}">New room</a>
 </div>
 
-<div th:fragment="adminanel-links" class="user-menu">
-    <a id="menu-pending" onclick="userMenuNavigation(this.id)" th:href="@{/index}"
-       class="btn menu-btn btn-info center-align">
-        <span th:text="#{message.index-page.your-requests}">Pending</span>
-        <span th:unless="${pendedCount==0}"
-              th:text="'('+${pendedCount}+')'">1</span>
-    </a>
-    <a id="menu-approved" onclick="userMenuNavigation(this.id)" th:href="@{/index(pr_page=1)}"
-       class="btn menu-btn btn-info center-align"> <span
-            th:text="#{message.index-page.processed-requests}">Processed</span>
-        <span th:unless="${approvedCount==0}"
-              th:text="'('+${approvedCount}+')'">1</span>
-    </a>
-    <a id="menu-denied" onclick="userMenuNavigation(this.id)" th:href="@{/index(dr_page=1)}"
-       class="btn menu-btn btn-info center-align">
-        <span th:text="#{message.admin-page.denied}">Denied</span>
-        <span th:unless="${deniedCount==0}"
-              th:text="'('+${deniedCount}+')'">1</span>
-    </a>
-    <a id="menu-rooms" th:href="@{/rooms}"
-       class="btn menu-btn btn-info center-align"
-       th:text="#{message.hotel.rooms}">Rooms</a>
-    <a id="menu-newroom" th:href="@{/rooms/new}"
-       class="btn menu-btn btn-info center-align"
-       th:text="#{message.hotel.new-room}">New room</a>
-</div>
-
 <div th:fragment="admintables">
     <div hidden id="pending-requests" class="index-table">
         <p class="white"
@@ -95,7 +68,8 @@
                             <div th:id="'deny-div-'+${unapprovedRequest.id}" hidden
                                  th:with="deniedRequest = ${unapprovedRequest.deniedRequest}">
                                 <form method="post" th:action="@{/admin/deny}" th:object="${deniedRequest}">
-                                    <input id="reason" name="reason" th:value="${unapprovedRequest.deniedRequest.reason}"
+                                    <input id="reason" name="reason"
+                                           th:value="${unapprovedRequest.deniedRequest.reason}"
                                            type="text" th:placeholder="#{message.admin-page.enter-reason}">
                                     <div>
                                         <button type="submit" class="btn btn-danger deny-btn"
@@ -138,9 +112,9 @@
             </nav>
         </div>
     </div>
-    <div id="approved-requests" class="index-table">
+    <div hidden id="approved-requests" class="index-table">
         <p class="white"
-           th:if="${approvedRequestList.hasContent()==false}"
+           th:if="${!approvedRequestList.hasContent()}"
            th:text="#{message.admin-page.no-request}">
             There are no approved requests</p>
         <div th:if="${approvedRequestList.hasContent()}">
@@ -199,59 +173,59 @@
                 </ul>
             </nav>
         </div>
-        <div id="denied-requests" class="index-table">
-            <p class="white" th:if="${deniedRequestList.hasContent()==false}" th:text="#{message.admin-page.no-request}">
-                There are no approved requests</p>
-            <div th:if="${deniedRequestList.hasContent()}">
-                <table class="table table-bordered white">
-                    <thead>
+    </div>
+    <div hidden id="denied-requests" class="index-table">
+        <p class="white" th:if="${!deniedRequestList.hasContent()}" th:text="#{message.admin-page.no-request}">
+            There are no denied requests</p>
+        <div th:if="${deniedRequestList.hasContent()}">
+            <table class="table table-bordered white">
+                <thead>
+                <tr>
+                    <th scope="col">№</th>
+                    <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
+                    <th scope="col" th:text="#{message.hotel.class}">Class</th>
+                    <th scope="col" th:text="#{message.hotel.checkin}">Check in</th>
+                    <th scope="col" th:text="#{message.hotel.checkout}">Check out</th>
+                    <th scope="col" th:text="#{message.hotel.reason}">Reason of denial</th>
+                </tr>
+                </thead>
+                <tbody>
+                <th:block th:each="deniedRequest : ${deniedRequestList}">
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
-                        <th scope="col" th:text="#{message.hotel.class}">Class</th>
-                        <th scope="col" th:text="#{message.hotel.checkin}">Check in</th>
-                        <th scope="col" th:text="#{message.hotel.checkout}">Check out</th>
-                        <th scope="col" th:text="#{message.hotel.reason}">Reason of denial</th>
+                        <td th:text="${deniedRequest.id}" scope="row">1</td>
+                        <td th:text="#{'message.capacity.'+${deniedRequest.capacity}}"></td>
+                        <td th:text="#{'message.class.'+${deniedRequest.classID}}"></td>
+                        <td th:text="${#dates.format(deniedRequest.checkIn,'MM/dd/yyyy')}"></td>
+                        <td th:text="${#dates.format(deniedRequest.checkOut,'MM/dd/yyyy')}"></td>
+                        <td th:text="${deniedRequest.deniedRequest.reason}"></td>
                     </tr>
-                    </thead>
-                    <tbody>
-                    <th:block th:each="deniedRequest : ${deniedRequestList}">
-                        <tr>
-                            <th th:text="${deniedRequest.id}" scope="row">1</th>
-                            <td th:text="#{'message.capacity.'+${deniedRequest.capacity}}"></td>
-                            <td th:text="#{'message.class.'+${deniedRequest.classID}}"></td>
-                            <td th:text="${#dates.format(deniedRequest.checkIn,'MM/dd/yyyy')}"></td>
-                            <td th:text="${#dates.format(deniedRequest.checkOut,'MM/dd/yyyy')}"></td>
-                            <td th:text="${deniedRequest.deniedRequest.reason}"></td>
-                        </tr>
-                    </th:block>
-                    </tbody>
-                </table>
+                </th:block>
+                </tbody>
+            </table>
 
-                <nav th:if="${deniedRequestList.totalPages > 0}">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item" th:classappend="${deniedRequestList.isFirst()} ? disabled">
-                            <a class="page-link"
-                               th:href="@{/admin(drq_page=${deniedRequestList.number})}"
-                               tabindex="-1"><
-                            </a>
-                        </li>
-                        <li th:each="deniedPageNumber : ${deniedPageNumbers}" class="page-item"
-                            th:classappend="${deniedPageNumber==deniedRequestList.number + 1} ? disabled">
-                            <a class="page-link"
-                               th:href="@{/admin(drq_page=${deniedPageNumber})}"
-                               th:text="${deniedPageNumber}">
-                            </a>
-                        </li>
-                        <li class="page-item" th:classappend="${deniedRequestList.isLast()} ? disabled">
-                            <a class="page-link"
-                               th:href="@{/deniedrequests(page=${deniedRequestList.number}+2)}"
-                            >>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+            <nav th:if="${deniedRequestList.totalPages > 0}">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:classappend="${deniedRequestList.isFirst()} ? disabled">
+                        <a class="page-link"
+                           th:href="@{/admin(drq_page=${deniedRequestList.number})}"
+                           tabindex="-1"><
+                        </a>
+                    </li>
+                    <li th:each="deniedPageNumber : ${deniedPageNumbers}" class="page-item"
+                        th:classappend="${deniedPageNumber==deniedRequestList.number + 1} ? disabled">
+                        <a class="page-link"
+                           th:href="@{/admin(drq_page=${deniedPageNumber})}"
+                           th:text="${deniedPageNumber}">
+                        </a>
+                    </li>
+                    <li class="page-item" th:classappend="${deniedRequestList.isLast()} ? disabled">
+                        <a class="page-link"
+                           th:href="@{/deniedrequests(page=${deniedRequestList.number}+2)}"
+                        >>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
     <div class="card-footer">
