--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -6,6 +6,7 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <head>
     <title>Hotel System</title>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -22,15 +23,10 @@
             <div class="card-body">
                 <div th:insert="~{fragments/admin :: admintables}"></div>
             </div>
-            <div class="card-footer">
-                <div th:insert="~{fragments/common :: footer}"></div>
-            </div>
+            <div class="footer" th:insert="~{fragments/common :: footer}"></div>
         </div>
     </div>
 </div>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script th:src="@{js/hotel.js}"></script>
-
-</body>k
+</body>
 </html>
