--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -6,8 +6,13 @@
 
 
 <div th:fragment="header" id="header" class="card-header card-header-flex">
-    <a sec:authorize="hasRole('ADMIN')" th:href="@{/admin}" th:text="#{message.index-page.admin}"
-       class="btn header-button menu-btn btn-info center-align">Admin </a>
+    <a id="toAdminPage"th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/' }"
+       sec:authorize="hasRole('ADMIN')" th:text="#{message.index-page.admin}"
+       th:href="@{/admin}" class="btn header-button menu-btn btn-info leftTop">Admin</a>
+    <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'}"
+       sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.user}"
+       th:href="@{/index}" class="btn header-button menu-btn btn-info leftContainer">Admin</p>
+    </a>
     <div class="card-header-flex">
         <div class="language">
             <span th:text="#{message.change-language}+': '"></span>
@@ -28,7 +33,13 @@
 
 <div th:fragment="footer" class="card-footer">
     <div>
-        <p class="float-right">FOOTER //ToDo</p>
+        <form name="logoutForm" th:action="@{/logout}" method="post">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <input onclick="back()" class="btn header-button btn-dark" th:value="#{message.back}"/>
+            <a id="userEditor" th:if="${#httpServletRequest.requestURI == '/admin'}"
+               sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.usersmenu}"
+               th:href="@{/admin/users}"  class="btn header-button btn-dark rightContainer">Edit users</a>
+        </form>
     </div>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
