Added page with currently living customers

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -136,6 +136,8 @@
                     rooms</a>
                 <a th:href="@{/admin/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
                     users</a>
+                <a th:href="@{/admin/today-users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">
+                    Currently living in a hotel</a>
             </div>
         </div>
     </div>
