Updated frontend buttons

--- a/src/main/resources/templates/approved-requests.html
+++ b/src/main/resources/templates/approved-requests.html
@@ -118,6 +118,8 @@
                     menu</a>
                 <a th:href="@{/rooms}" th:text="#{message.admin-page.editrooms}" class="btn btn-dark float-right">Edit
                     rooms</a>
+                <a th:href="@{/admin/today-users}" th:text="#{message-admin-page.current-residents-menu}" class="btn btn-dark float-right">
+                    In a hotel</a>
                 <a th:href="@{/admin/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
                     users</a>
             </div>
