--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -134,10 +134,10 @@
                     menu</a>
                 <a th:href="@{/rooms}" th:text="#{message.admin-page.editrooms}" class="btn btn-dark float-right">Edit
                     rooms</a>
+                <a th:href="@{/admin/today-users}" th:text="#{message-admin-page.current-residents-menu}" class="btn btn-dark float-right">
+                    In a hotel</a>
                 <a th:href="@{/admin/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
                     users</a>
-                <a th:href="@{/admin/today-users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">
-                    Currently living in a hotel</a>
             </div>
         </div>
     </div>
