--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -49,6 +49,10 @@
     <script> $(document).ready(function () {
         indexUrls();
     });</script>
+    <script> $(document).ready(function () {
+        adminUrls();
+    });</script>
+
 </div>
 
 
