Updated common elements of the pages

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,6 +101,11 @@ h3 {
     justify-content: space-between;
 }
 
+.card-left-flex {
+    display: flex;
+    justify-content: left;
+}
+
 .language {
     padding-top: 19px;
 }
