--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -22,11 +22,9 @@
         <span th:unless="${deniedCount==0}"
               th:text="'('+${deniedCount}+')'">1</span>
     </a>
-    <a id="menu-rooms" onclick="adminMenuNavigation(this.id)"
-       class="btn menu-btn btn-info center-align">
-        <span th:text="#{message.hotel.rooms}">Rooms</span>
-    </a>
-
+    <a id="menu-rooms" th:href="@{/rooms}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.rooms}">Rooms</a>
     <a id="menu-newroom" th:href="@{/rooms/new}"
        class="btn menu-btn btn-info center-align"
        th:text="#{message.hotel.new-room}">New room</a>
