--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -6,13 +6,12 @@
 
 
 <div th:fragment="header" id="header" class="card-header card-header-flex">
-    <a id="toAdminPage"th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/' }"
-       sec:authorize="hasRole('ADMIN')" th:text="#{message.index-page.admin}"
-       th:href="@{/admin}" class="btn header-button menu-btn btn-info leftTop">Admin</a>
-    <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'}"
-       sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.user}"
-       th:href="@{/index}" class="btn header-button menu-btn btn-info leftContainer">Admin</p>
-    </a>
+    <div class="logo">
+        <a>
+            <img width="400px" th:src="@{/images/logo.png}">
+        </a>
+    </div>
+
     <div class="card-header-flex">
         <div class="language">
             <span th:text="#{message.change-language}+': '"></span>
@@ -36,23 +35,58 @@
         <form name="logoutForm" th:action="@{/logout}" method="post">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <input onclick="back()" class="btn header-button btn-dark" th:value="#{message.back}"/>
+            <a id="toAdminPage"
+               th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/' }"
+               sec:authorize="hasRole('ADMIN')" th:text="#{message.index-page.admin}"
+               th:href="@{/admin}" class="btn header-button btn-dark rightContainer">Admin</a>
+            <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'}"
+               sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.user}"
+               th:href="@{/index}" class="btn header-button btn-dark rightContainer">Admin</p>
+            </a>
+            <a id="toHomePage" th:if="${#httpServletRequest.requestURI == '/rooms' ||
+    #httpServletRequest.requestURI == '/request/new' ||
+    #httpServletRequest.requestURI == '/rooms/new'}"
+               th:text="#{message.roomslist-page.button.home}"
+               th:href="@{/index}" class="btn header-button btn-dark rightContainer">Home</p>
+            </a>
             <a id="userEditor" th:if="${#httpServletRequest.requestURI == '/admin'}"
                sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.usersmenu}"
-               th:href="@{/admin/users}"  class="btn header-button btn-dark rightContainer">Edit users</a>
+               th:href="@{/admin/users}" class="btn header-button btn-dark rightContainer">Edit users</a>
         </form>
     </div>
+
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script th:src="@{/js/hotel.js}"></script>
-    <script> $(document).ready(function () {
-        indexUrls();
-    });</script>
-    <script> $(document).ready(function () {
-        adminUrls();
-    });</script>
-
+    <script th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/user'}">
+        $(document).ready(function () {
+            indexUrls();
+        });</script>
+    <script th:if="${#httpServletRequest.requestURI == '/admin'}">
+        $(document).ready(function () {
+            adminUrls();
+        });</script>
+</div>
+<div th:fragment="panel-links" class="user-menu">
+    <a sec:authorize="hasAnyRole('USER, ADMIN')" id="to-user-menu" th:href="@{/index(ur_page=1)}"
+       class="btn menu-btn btn-info center-align">
+        <span th:text="#{message.button.user-menu}">To user menu</span>
+    </a>
+    <a sec:authorize="hasRole('ADMIN')" id="to-admin-menu" th:href="@{/admin(prq_page=1)}"
+       class="btn menu-btn btn-info center-align">
+        <span th:text="#{message.button.admin-menu}">To admin menu</span>
+    </a>
+    <a sec:authorize="hasAnyRole('USER, ADMIN')" id="menu-rooms" th:href="@{/rooms}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.rooms}">Rooms</a>
+    <a sec:authorize="hasAnyRole('USER, ADMIN')" id="menu-newrequest" th:href="@{/request/new}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.new-request}">New request</a>
+    <a sec:authorize="hasRole('ADMIN')" id="menu-newroom" th:href="@{/rooms/new}"
+       class="btn menu-btn btn-info center-align"
+       th:text="#{message.hotel.new-room}">New room</a>
 </div>
 
 
