--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,7 +16,6 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div th:insert="~{fragments/common :: header}"></div>
-
             <div>
                 <h3 id="login-header" class="text-center" th:text="#{'message.error-page.header.' + ${errorCode}}">
                     Header</h3>
@@ -24,12 +23,10 @@
             <div th:with="errorMessage='message.error.'+${errorCode}" class="card-body">
                 <p class="text-center" th:text="#{${errorMessage}}"></p>
                 <div class="center-align">
-                    <a onclick="back()" class="btn btn-dark" th:text="#{message.back}">Back</a>
+                    <a th:href="@{/index}" class="btn btn-dark" th:text="#{message.roomslist-page.button.home}">Home</a>
                 </div>
             </div>
-            <div class="card-footer">
             <div class="footer" th:insert="~{fragments/common :: footer}"></div>
-        </div>
     </div>
 </div>
 </div>
