Fix problems footer admin

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -21,12 +21,10 @@
             <div th:insert="~{fragments/common :: header}"></div>
             <div th:insert="~{fragments/admin :: userpanel-admin}"></div>
             <div class="card-body">
+
                 <div th:insert="~{fragments/admin :: admintables}"></div>
             </div>
-            <div class="footer" th:insert="~{fragments/common :: footer}">
-                <a th:href="@{/index}" th:text="#{message.admin-page.user}" class="btn btn-info float-left">User
-                    menu</a>
-            </div>
+            <div class="footer" th:insert="~{fragments/common :: footer}"></div>
         </div>
     </div>
 </div>
