--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -32,27 +32,27 @@
 
 <div th:fragment="footer" class="card-footer">
     <div>
-        <form name="logoutForm" th:action="@{/logout}" method="post">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <input onclick="back()" class="btn header-button btn-dark" th:value="#{message.back}"/>
-            <a id="toAdminPage"
-               th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/' }"
-               sec:authorize="hasRole('ADMIN')" th:text="#{message.index-page.admin}"
-               th:href="@{/admin}" class="btn header-button btn-dark rightContainer">Admin</a>
-            <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'}"
-               sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.user}"
-               th:href="@{/index}" class="btn header-button btn-dark rightContainer">Admin</p>
-            </a>
-            <a id="toHomePage" th:if="${#httpServletRequest.requestURI == '/rooms' ||
+        <input onclick="back()" class="btn header-button btn-dark" th:value="#{message.back}"/>
+        <a id="toAdminPage"
+           th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/' }"
+           sec:authorize="hasRole('ADMIN')" th:text="#{message.index-page.admin}"
+           th:href="@{/admin}" class="btn header-button btn-dark rightContainer">Admin</a>
+        <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'}"
+           sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.user}"
+           th:href="@{/index}" class="btn header-button btn-dark rightContainer">Admin</p>
+        </a>
+        <a id="toHomePage" th:if="${#httpServletRequest.requestURI == '/rooms' ||
     #httpServletRequest.requestURI == '/request/new' ||
     #httpServletRequest.requestURI == '/rooms/new'}"
-               th:text="#{message.roomslist-page.button.home}"
-               th:href="@{/index}" class="btn header-button btn-dark rightContainer">Home</p>
-            </a>
-            <a id="userEditor" th:if="${#httpServletRequest.requestURI == '/admin'}"
-               sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.usersmenu}"
-               th:href="@{/admin/users}" class="btn header-button btn-dark rightContainer">Edit users</a>
-        </form>
+           th:text="#{message.roomslist-page.button.home}"
+           th:href="@{/index}" class="btn header-button btn-dark rightContainer">Home</p>
+        </a>
+        <a id="userEditor" th:if="${#httpServletRequest.requestURI == '/admin'}"
+           sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.usersmenu}"
+           th:href="@{/admin/users}" class="btn header-button btn-dark rightContainer">Edit users</a>
+        <a th:href="@{/admin/today-users}" sec:authorize="hasRole('ADMIN')"
+           th:text="#{message-admin-page.current-residents-menu}" class="btn header-button btn-dark rightContainer">
+            In a hotel</a>
     </div>
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -60,15 +60,14 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script th:src="@{/js/hotel.js}"></script>
-    <script th:if="${#httpServletRequest.requestURI == '/admin'}">
-        $(document).ready(function () {
-            adminUrls();
-        });</script>
-    <script th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/user'}">
+    <script>
         $(document).ready(function () {
             indexUrls();
+            adminUrls();
+            if (document.getElementById("price").value === '') {
+                $('#price').val(getPrice());
+            }
         });</script>
-
 </div>
 
 <div th:fragment="panel-links" class="user-menu">
