Fixed missing html template for today users

--- a/src/main/resources/templates/today-users.html
+++ b/src/main/resources/templates/today-users.html
@@ -95,6 +95,10 @@
                     </ul>
                 </nav>
 
+                <div>
+                    <a th:href="@{/admin}" th:text="#{message.admin-page.back-to-admin}" class="btn btn-info float-left">Back to admin menu</a>
+                </div>
+
             </div>
         </div>
     </div>
